-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0 Alpha
-
f949f336888c7205d06b56073805e201246fae9c (qt/qtbase/5.15)
Using a QSet as signal/slot parameter results in a warning:
C:\Qt\5.15.0\mingw73_64\include\QtCore\qset.h:177: warning: 'QHash<K, V>::const_iterator& QHash<K, V>::const_iterator::operator--() [with Key = QString; T = QHashDummyValue]' is deprecated [-Wdeprecated-declarations]
inline QT_DEPRECATED const_iterator &operator--() { --i; return *this; }
^~~
Steps to reproduce:
- Build the attached project
- Observe compile output
- is duplicated by
-
QTBUG-82608 QSet deprecation warning for range loops
-
- Closed
-
For Gerrit Dashboard: QTBUG-82397 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
291730,3 | QHash/QSet: Base iterator tag on warning version rather than deprecation | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |